--- a/data/Main.ipynb
+++ b/data/Main.ipynb
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "47edc13a",
    "metadata": {},
    "outputs": [],
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "dadc2915",
    "metadata": {},
    "outputs": [],
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5f3f7e0a",
    "metadata": {},
    "outputs": [],
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "f860f707",
    "metadata": {},
    "outputs": [
@@ -661,6 +661,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\criju\\AppData\\Roaming\\Python\\Python311\\site-packages\\huggingface_hub\\file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "W0627 08:43:59.141000 26264 torch\\distributed\\elastic\\multiprocessing\\redirects.py:29] NOTE: Redirects are currently not supported in Windows or MacOs.\n",
       "C:\\Users\\criju\\AppData\\Roaming\\Python\\Python311\\site-packages\\huggingface_hub\\file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n"
      ]
@@ -692,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "dd844bde",
    "metadata": {},
    "outputs": [],
@@ -704,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "7744f0c8",
    "metadata": {},
    "outputs": [],
@@ -715,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "efb30461",
    "metadata": {},
    "outputs": [
@@ -751,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "59304d4b",
    "metadata": {},
    "outputs": [],
@@ -767,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "7c21be1b",
    "metadata": {},
    "outputs": [],
@@ -801,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "8af98142",
    "metadata": {},
    "outputs": [],
@@ -813,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "40fa0141",
    "metadata": {},
    "outputs": [],
@@ -899,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "e0f75b87",
    "metadata": {},
    "outputs": [
@@ -929,17 +932,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 4ms/step - mse: 0.5795 - distill_loss: 0.2123 - loss: -0.0439 - tor_loss: 0.2303 - val_distill_loss: 0.0856 - val_loss: -0.0605 - val_tor_loss: 0.1005\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 6ms/step - mse: 0.4590 - distill_loss: 0.1999 - loss: -0.0401 - tor_loss: 0.1967 - val_distill_loss: 0.0713 - val_loss: -0.0505 - val_tor_loss: 0.0734\n",
       "Epoch 2/20\n",
-      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - mse: 0.2984 - distill_loss: 0.1211 - loss: -0.0239 - tor_loss: 0.1215 - val_distill_loss: 0.0814 - val_loss: -0.0529 - val_tor_loss: 0.0841\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - mse: 0.2916 - distill_loss: 0.1161 - loss: -8.4740e-04 - tor_loss: 0.1176 - val_distill_loss: 0.0624 - val_loss: -0.0176 - val_tor_loss: 0.0668\n",
       "Epoch 3/20\n",
-      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - mse: 0.2787 - distill_loss: 0.0933 - loss: -0.0168 - tor_loss: 0.0942 - val_distill_loss: 0.0779 - val_loss: -0.0353 - val_tor_loss: 0.0807\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 6ms/step - mse: 0.2633 - distill_loss: 0.0883 - loss: -0.0073 - tor_loss: 0.0882 - val_distill_loss: 0.0766 - val_loss: -0.0513 - val_tor_loss: 0.0842\n",
       "Epoch 4/20\n",
-      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - mse: 0.2489 - distill_loss: 0.0774 - loss: -0.0201 - tor_loss: 0.0784 - val_distill_loss: 0.0653 - val_loss: -0.0459 - val_tor_loss: 0.0708\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2538 - distill_loss: 0.0770 - loss: -0.0039 - tor_loss: 0.0773 - val_distill_loss: 0.0711 - val_loss: -0.0238 - val_tor_loss: 0.0755\n",
       "Epoch 5/20\n",
-      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - mse: 0.2590 - distill_loss: 0.0720 - loss: -0.0296 - tor_loss: 0.0722 - val_distill_loss: 0.0589 - val_loss: -0.0301 - val_tor_loss: 0.0618\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2674 - distill_loss: 0.0711 - loss: -0.0164 - tor_loss: 0.0712 - val_distill_loss: 0.0703 - val_loss: -0.0267 - val_tor_loss: 0.0743\n",
       "Epoch 6/20\n",
-      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - mse: 0.2600 - distill_loss: 0.0687 - loss: -0.0198 - tor_loss: 0.0685 - val_distill_loss: 0.0779 - val_loss: -0.0580 - val_tor_loss: 0.0786\n"
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2682 - distill_loss: 0.0684 - loss: -0.0102 - tor_loss: 0.0692 - val_distill_loss: 0.0671 - val_loss: -0.0465 - val_tor_loss: 0.0828\n",
+      "Epoch 7/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2685 - distill_loss: 0.0662 - loss: -0.0022 - tor_loss: 0.0666 - val_distill_loss: 0.0651 - val_loss: -0.0466 - val_tor_loss: 0.0740\n",
+      "Epoch 8/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2536 - distill_loss: 0.0649 - loss: -0.0102 - tor_loss: 0.0649 - val_distill_loss: 0.0587 - val_loss: -0.0418 - val_tor_loss: 0.0648\n",
+      "Epoch 9/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2461 - distill_loss: 0.0633 - loss: -0.0281 - tor_loss: 0.0633 - val_distill_loss: 0.0769 - val_loss: -0.0585 - val_tor_loss: 0.0914\n",
+      "Epoch 10/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2755 - distill_loss: 0.0620 - loss: -0.0286 - tor_loss: 0.0621 - val_distill_loss: 0.0684 - val_loss: -0.0474 - val_tor_loss: 0.0733\n",
+      "Epoch 11/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2483 - distill_loss: 0.0615 - loss: -0.0174 - tor_loss: 0.0618 - val_distill_loss: 0.0715 - val_loss: -0.0403 - val_tor_loss: 0.0756\n",
+      "Epoch 12/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2574 - distill_loss: 0.0605 - loss: -0.0051 - tor_loss: 0.0606 - val_distill_loss: 0.0716 - val_loss: -0.0404 - val_tor_loss: 0.0760\n",
+      "Epoch 13/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2389 - distill_loss: 0.0598 - loss: -0.0036 - tor_loss: 0.0600 - val_distill_loss: 0.0656 - val_loss: -0.0449 - val_tor_loss: 0.0734\n",
+      "Epoch 14/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 8ms/step - mse: 0.2483 - distill_loss: 0.0585 - loss: -0.0102 - tor_loss: 0.0587 - val_distill_loss: 0.0613 - val_loss: -0.0341 - val_tor_loss: 0.0646\n",
+      "Epoch 15/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2533 - distill_loss: 0.0582 - loss: -0.0120 - tor_loss: 0.0585 - val_distill_loss: 0.0588 - val_loss: -0.0383 - val_tor_loss: 0.0576\n",
+      "Epoch 16/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 8ms/step - mse: 0.2462 - distill_loss: 0.0568 - loss: -0.0137 - tor_loss: 0.0569 - val_distill_loss: 0.0593 - val_loss: -0.0305 - val_tor_loss: 0.0589\n",
+      "Epoch 17/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2632 - distill_loss: 0.0570 - loss: -0.0147 - tor_loss: 0.0571 - val_distill_loss: 0.0632 - val_loss: -0.0223 - val_tor_loss: 0.0574\n",
+      "Epoch 18/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2600 - distill_loss: 0.0563 - loss: -0.0210 - tor_loss: 0.0564 - val_distill_loss: 0.0566 - val_loss: -0.0289 - val_tor_loss: 0.0560\n",
+      "Epoch 19/20\n",
+      "\u001b[1m325/325\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 7ms/step - mse: 0.2590 - distill_loss: 0.0556 - loss: -0.0076 - tor_loss: 0.0555 - val_distill_loss: 0.0502 - val_loss: -0.0299 - val_tor_loss: 0.0472\n"
      ]
     }
    ],
@@ -962,7 +991,7 @@
     "student.compile(optimizer='adam', metrics=[tf.keras.metrics.MeanSquaredError(name=\"mse\")])\n",
     "\n",
     "# 4) Fit\n",
-    "es = EarlyStopping(monitor='val_loss', patience=5, restore_best_weights=True)\n",
+    "es = EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
     "history = student.fit(\n",
     "    X_train, y_true_train,\n",
     "    validation_data=(X_val, y_true_val),\n",
@@ -970,6 +999,52 @@
     "    batch_size=32,\n",
     "    callbacks=[es]\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52b0b559",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m82/82\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Same names as the paper \n",
+    "Rs_output, Rd_output = student.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "0cba16da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 0.2877428512142349\n",
+      "MSE: 0.2642919448909081\n",
+      "SMAPE: 59.51578932542068\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluar en conjunto de validación\n",
+    "mae = mean_absolute_error(y_val, Rd_output)\n",
+    "mse = mean_squared_error(y_val, Rd_output)\n",
+    "smape_val = smape_chunked(y_val, Rd_output, chunk_size=500_000)\n",
+    "\n",
+    "print(\"MAE:\", mae)\n",
+    "print(\"MSE:\", mse)\n",
+    "print(\"SMAPE:\", smape_val)"
    ]
   }
  ],
