--- a/data/Main.ipynb
+++ b/data/Main.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6087b780",
    "metadata": {},
    "outputs": [],
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "47edc13a",
    "metadata": {},
    "outputs": [],
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "dadc2915",
    "metadata": {},
    "outputs": [],
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5f3f7e0a",
    "metadata": {},
    "outputs": [],
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f860f707",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
      "text": [
       "C:\\Users\\criju\\AppData\\Roaming\\Python\\Python311\\site-packages\\huggingface_hub\\file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n",
-      "W0627 08:43:59.141000 26264 torch\\distributed\\elastic\\multiprocessing\\redirects.py:29] NOTE: Redirects are currently not supported in Windows or MacOs.\n",
+      "W0711 08:20:25.122000 17036 torch\\distributed\\elastic\\multiprocessing\\redirects.py:29] NOTE: Redirects are currently not supported in Windows or MacOs.\n",
       "C:\\Users\\criju\\AppData\\Roaming\\Python\\Python311\\site-packages\\huggingface_hub\\file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n"
      ]
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "dd844bde",
    "metadata": {},
    "outputs": [],
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "7744f0c8",
    "metadata": {},
    "outputs": [],
@@ -718,7 +718,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
+   "id": "cd3fd026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save teacher results for train and validation sets\n",
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "os.makedirs('teacher_results', exist_ok=True)\n",
+    "\n",
+    "with open('teacher_results/val_teacher.csv', mode='w', newline='') as archivo:\n",
+    "    escritor = csv.writer(archivo)\n",
+    "    escritor.writerows(r_t_val)\n",
+    "\n",
+    "with open('teacher_results/train_teacher.csv', mode='w', newline='') as archivo:\n",
+    "    escritor = csv.writer(archivo)\n",
+    "    escritor.writerows(r_t_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "efb30461",
    "metadata": {},
    "outputs": [
@@ -754,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "59304d4b",
    "metadata": {},
    "outputs": [],
@@ -770,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "7c21be1b",
    "metadata": {},
    "outputs": [],
@@ -804,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "8af98142",
    "metadata": {},
    "outputs": [],
@@ -816,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "40fa0141",
    "metadata": {},
    "outputs": [],
@@ -1041,6 +1063,33 @@
     "mae = mean_absolute_error(y_val, Rd_output)\n",
     "mse = mean_squared_error(y_val, Rd_output)\n",
     "smape_val = smape_chunked(y_val, Rd_output, chunk_size=500_000)\n",
+    "\n",
+    "print(\"MAE:\", mae)\n",
+    "print(\"MSE:\", mse)\n",
+    "print(\"SMAPE:\", smape_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "0d23bd2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 0.28298446019946893\n",
+      "MSE: 0.2589125500484601\n",
+      "SMAPE: 59.85760028545673\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Resultados de modelos teacher sobre el conjunto de validación \n",
+    "mae = mean_absolute_error(y_val, r_t_val)\n",
+    "mse = mean_squared_error(y_val, r_t_val)\n",
+    "smape_val = smape_chunked(y_val, r_t_val, chunk_size=500_000)\n",
     "\n",
     "print(\"MAE:\", mae)\n",
     "print(\"MSE:\", mse)\n",
