update neural - miss destillation

--- a/data/Main_neural.ipynb
+++ b/data/Main_neural.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "f66f53ac",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
     "root_path = os.path.abspath(os.path.join(os.getcwd(), '..'))\n",
     "sys.path.append(root_path)\n",
     "\n",
-    "from baseline.functions import load_data,create_intervals,create_windows,smape,smape_chunked\n",
+    "from baseline.functions import load_data,create_intervals,create_windows,smape,smape_chunked,sample_fraction\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "\n",
     "def load_data_clean():\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "a51bb61c",
    "metadata": {},
    "outputs": [
@@ -129,8 +129,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "17105ab1",
+   "metadata": {},
+   "source": [
+    "### Neural - 100 %"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "33d8840a",
    "metadata": {},
    "outputs": [],
@@ -141,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "34b5b15f",
    "metadata": {},
    "outputs": [],
@@ -164,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "2dfbda97",
    "metadata": {},
    "outputs": [
@@ -239,7 +247,7 @@
     "\n",
     "    model = model.to(device)\n",
     "    criterion = nn.MSELoss()\n",
-    "    optimizer = optim.Adam(model.parameters(), lr=0.01)\n",
+    "    optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "    loss_vals = []\n",
     "    for epoch in range(epochs):\n",
@@ -287,6 +295,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\criju\\.conda\\envs\\cuda\\lib\\site-packages\\torch\\nn\\modules\\loss.py:535: UserWarning: Using a target size (torch.Size([64])) that is different to the input size (torch.Size([64, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
       "c:\\Users\\criju\\.conda\\envs\\cuda\\lib\\site-packages\\torch\\nn\\modules\\loss.py:535: UserWarning: Using a target size (torch.Size([29])) that is different to the input size (torch.Size([29, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
       "  return F.mse_loss(input, target, reduction=self.reduction)\n"
      ]
@@ -295,28 +305,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Loss: 1.0048\n",
-      "Epoch 2/20, Loss: 1.0045\n",
-      "Epoch 3/20, Loss: 1.0040\n",
+      "Epoch 1/20, Loss: 1.0131\n",
+      "Epoch 2/20, Loss: 1.0036\n",
+      "Epoch 3/20, Loss: 1.0035\n",
       "Epoch 4/20, Loss: 1.0035\n",
-      "Epoch 5/20, Loss: 1.0062\n",
+      "Epoch 5/20, Loss: 1.0034\n",
       "Epoch 6/20, Loss: 1.0034\n",
-      "Epoch 7/20, Loss: 1.0041\n",
-      "Epoch 8/20, Loss: 1.0037\n",
-      "Epoch 9/20, Loss: 1.0037\n",
-      "Epoch 10/20, Loss: 1.0086\n",
-      "Epoch 11/20, Loss: 1.0084\n",
-      "Epoch 12/20, Loss: 1.0038\n",
-      "Epoch 13/20, Loss: 1.0036\n",
-      "Epoch 14/20, Loss: 1.0043\n",
-      "Epoch 15/20, Loss: 1.0035\n",
-      "Epoch 16/20, Loss: 1.0038\n",
-      "Epoch 17/20, Loss: 1.0048\n",
-      "Epoch 18/20, Loss: 1.0039\n",
-      "Epoch 19/20, Loss: 1.0042\n",
-      "Epoch 20/20, Loss: 1.0069\n",
-      "Mejor época = 6, Loss = 1.0034\n",
-      "MAE: 0.7089, MSE: 1.0057, sMAPE: 171.5585\n"
+      "Epoch 7/20, Loss: 1.0034\n",
+      "Epoch 8/20, Loss: 1.0034\n",
+      "Epoch 9/20, Loss: 1.0034\n",
+      "Epoch 10/20, Loss: 1.0034\n",
+      "Epoch 11/20, Loss: 1.0034\n",
+      "Epoch 12/20, Loss: 1.0034\n",
+      "Epoch 13/20, Loss: 1.0034\n",
+      "Epoch 14/20, Loss: 1.0034\n",
+      "Epoch 15/20, Loss: 1.0034\n",
+      "Epoch 16/20, Loss: 1.0034\n",
+      "Epoch 17/20, Loss: 1.0033\n",
+      "Epoch 18/20, Loss: 1.0034\n",
+      "Epoch 19/20, Loss: 1.0034\n",
+      "Epoch 20/20, Loss: 1.0033\n",
+      "Mejor época = 17, Loss = 1.0033\n",
+      "MAE: 0.7171, MSE: 0.9914, sMAPE: 97.4496\n"
      ]
     }
    ],
@@ -327,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "c9ade061",
    "metadata": {},
    "outputs": [],
@@ -338,9 +348,163 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59759df2",
+   "id": "c7f34051",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Neural - 10 %"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "def08a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to take only a percentage of the data\n",
+    "X_10, y_10 = sample_fraction(X, y, 0.10, random_state=42)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X_10, y_10, test_size=0.2, shuffle=True, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "536461f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\criju\\.conda\\envs\\cuda\\lib\\site-packages\\torch\\nn\\modules\\loss.py:535: UserWarning: Using a target size (torch.Size([64])) that is different to the input size (torch.Size([64, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
+      "c:\\Users\\criju\\.conda\\envs\\cuda\\lib\\site-packages\\torch\\nn\\modules\\loss.py:535: UserWarning: Using a target size (torch.Size([40])) that is different to the input size (torch.Size([40, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20, Loss: 1.1121\n",
+      "Epoch 2/20, Loss: 0.9849\n",
+      "Epoch 3/20, Loss: 0.9803\n",
+      "Epoch 4/20, Loss: 0.9787\n",
+      "Epoch 5/20, Loss: 0.9782\n",
+      "Epoch 6/20, Loss: 0.9779\n",
+      "Epoch 7/20, Loss: 0.9773\n",
+      "Epoch 8/20, Loss: 0.9775\n",
+      "Epoch 9/20, Loss: 0.9772\n",
+      "Epoch 10/20, Loss: 0.9771\n",
+      "Epoch 11/20, Loss: 0.9770\n",
+      "Epoch 12/20, Loss: 0.9771\n",
+      "Epoch 13/20, Loss: 0.9771\n",
+      "Epoch 14/20, Loss: 0.9770\n",
+      "Epoch 15/20, Loss: 0.9767\n",
+      "Epoch 16/20, Loss: 0.9767\n",
+      "Epoch 17/20, Loss: 0.9768\n",
+      "Epoch 18/20, Loss: 0.9768\n",
+      "Epoch 19/20, Loss: 0.9767\n",
+      "Epoch 20/20, Loss: 0.9767\n",
+      "Mejor época = 15, Loss = 0.9767\n",
+      "MAE: 0.7131, MSE: 0.9639, sMAPE: 97.2977\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = NeuralODEModel()\n",
+    "trained_model, loss_vals = train_model(model, X_train, y_train, X_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c2eef7a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Supongamos que tu modelo ya ha sido entrenado\n",
+    "torch.save(model.state_dict(), \"Models_neural/modelo_10.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "022c52b4",
+   "metadata": {},
+   "source": [
+    "### Neural - 3 %"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "338c2e35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to take only a percentage of the data\n",
+    "X_3, y_3 = sample_fraction(X, y, 0.03, random_state=42)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X_3, y_3, test_size=0.2, shuffle=True, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "052496a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\criju\\.conda\\envs\\cuda\\lib\\site-packages\\torch\\nn\\modules\\loss.py:535: UserWarning: Using a target size (torch.Size([64])) that is different to the input size (torch.Size([64, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n",
+      "c:\\Users\\criju\\.conda\\envs\\cuda\\lib\\site-packages\\torch\\nn\\modules\\loss.py:535: UserWarning: Using a target size (torch.Size([31])) that is different to the input size (torch.Size([31, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
+      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20, Loss: 1.2142\n",
+      "Epoch 2/20, Loss: 1.0117\n",
+      "Epoch 3/20, Loss: 0.9921\n",
+      "Epoch 4/20, Loss: 0.9858\n",
+      "Epoch 5/20, Loss: 0.9826\n",
+      "Epoch 6/20, Loss: 0.9807\n",
+      "Epoch 7/20, Loss: 0.9795\n",
+      "Epoch 8/20, Loss: 0.9787\n",
+      "Epoch 9/20, Loss: 0.9783\n",
+      "Epoch 10/20, Loss: 0.9778\n",
+      "Epoch 11/20, Loss: 0.9772\n",
+      "Epoch 12/20, Loss: 0.9772\n",
+      "Epoch 13/20, Loss: 0.9769\n",
+      "Epoch 14/20, Loss: 0.9764\n",
+      "Epoch 15/20, Loss: 0.9765\n",
+      "Epoch 16/20, Loss: 0.9763\n",
+      "Epoch 17/20, Loss: 0.9764\n",
+      "Epoch 18/20, Loss: 0.9758\n",
+      "Epoch 19/20, Loss: 0.9756\n",
+      "Epoch 20/20, Loss: 0.9765\n",
+      "Mejor época = 19, Loss = 0.9756\n",
+      "MAE: 0.7114, MSE: 0.9644, sMAPE: 98.2612\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = NeuralODEModel()\n",
+    "trained_model, loss_vals = train_model(model, X_train, y_train, X_val, y_val)\n",
+    "torch.save(model.state_dict(), \"Models_neural/modelo_3.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2c87edf",
+   "metadata": {},
+   "source": [
+    "# Neural Destilado"
+   ]
   }
  ],
  "metadata": {
