--- a/data/Main_neural.ipynb
+++ b/data/Main_neural.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f66f53ac",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.preprocessing import StandardScaler , RobustScaler\n",
-    "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "from matplotlib.ticker import MaxNLocator\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a51bb61c",
    "metadata": {},
    "outputs": [
@@ -154,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "33d8840a",
    "metadata": {},
    "outputs": [],
@@ -729,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "dfe2e02d",
    "metadata": {},
    "outputs": [
@@ -742,6 +741,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
