--- a/data/Main.ipynb
+++ b/data/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0f1d49a0",
+   "id": "527d68c3-8f6c-4f0c-a8e7-e9d2e1381ad2",
    "metadata": {},
    "source": [
     "# Train with time-300B \n",
@@ -1279,6 +1279,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f7e6fb7f-8042-4b32-a176-6072f5066bdc",
+   "metadata": {},
+   "source": [
+    "## Resultados de modelo timesMOE sobre el conjunto de validación"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "id": "8cfc1eab",
@@ -1599,7 +1607,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ts",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1613,7 +1621,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
