--- a/data/inference.ipynb
+++ b/data/inference.ipynb
@@ -5,7 +5,7 @@
    "id": "d559cf4c",
    "metadata": {},
    "source": [
-    "### Inferencia\n",
+    "# Inferencia\n",
     "En este notebook vamos a realizar la inferencia sobre los dataset de Covid-19 en Colombia y además como caso especifico en Santander un departamento de colombia, usaremos los modelos destilados que entrenamos previamente en los notebooks de Main_neural y Main."
    ]
   },
@@ -14,7 +14,7 @@
    "id": "5f370980",
    "metadata": {},
    "source": [
-    "### Santander"
+    "## Santander"
    ]
   },
   {
@@ -456,6 +456,8 @@
     "mae = mean_absolute_error(y, pred.cpu().detach().numpy())\n",
     "smape_val = smape(y, pred.cpu().detach().numpy())\n",
     "\n",
+    "# Se agrega identificador para modelo\n",
+    "print(\"Resultados Modelo neuralODE\")\n",
     "print(\"MAE:\", mae)\n",
     "print(\"MSE:\", mse)\n",
     "print(\"SMAPE:\", smape_val)"
@@ -486,6 +488,8 @@
     "mse = mean_squared_error(y, Rd_output)\n",
     "smape_val = smape(y, Rd_output)\n",
     "\n",
+    "# Se agrega identificador para modelo\n",
+    "print(\"Resultados Modelo LSTM\")\n",
     "print(\"MAE:\", mae)\n",
     "print(\"MSE:\", mse)\n",
     "print(\"SMAPE:\", smape_val)"
@@ -576,6 +580,9 @@
     "mse = mean_squared_error(y, pred_t)\n",
     "smape_val = smape(y, pred_t)\n",
     "\n",
+    "\n",
+    "# Se agrega identificador para modelo\n",
+    "print(\"Resultados Modelo timesMOE\")\n",
     "print(\"MAE:\", mae)\n",
     "print(\"MSE:\", mse)\n",
     "print(\"SMAPE:\", smape_val)"
@@ -637,6 +644,8 @@
     "mae = mean_absolute_error(y, pred.cpu().detach().numpy())\n",
     "smape_val = smape(y, pred.cpu().detach().numpy())\n",
     "\n",
+    "# Se agrega identificador para modelo\n",
+    "print(\"Resultados Modelo neuralODE\")\n",
     "print(\"MAE:\", mae)\n",
     "print(\"MSE:\", mse)\n",
     "print(\"SMAPE:\", smape_val)"
@@ -668,6 +677,8 @@
     "mse = mean_squared_error(y, Rd_output)\n",
     "smape_val = smape(y, Rd_output)\n",
     "\n",
+    "# Se agrega identificador para modelo\n",
+    "print(\"Resultados Modelo LSTM\")\n",
     "print(\"MAE:\", mae)\n",
     "print(\"MSE:\", mse)\n",
     "print(\"SMAPE:\", smape_val)\n"
@@ -722,9 +733,19 @@
     "mse = mean_squared_error(y, pred_t)\n",
     "smape_val = smape(y, pred_t)\n",
     "\n",
+    "# Se agrega identificador para modelo\n",
+    "print(\"Resultados Modelo timesMOE\")\n",
     "print(\"MAE:\", mae)\n",
     "print(\"MSE:\", mse)\n",
     "print(\"SMAPE:\", smape_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a97b4004-a53d-4784-9e1a-50decdabe877",
+   "metadata": {},
+   "source": [
+    "## Visualización ejemplos"
    ]
   },
   {
@@ -785,7 +806,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ts",
+   "display_name": "python3 tutoPredictPathEnv",
    "language": "python",
    "name": "python3"
   },
@@ -799,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
