--- a/data/inference.ipynb
+++ b/data/inference.ipynb
@@ -432,6 +432,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e29d4b16-d8bb-43fc-859e-a13c5b097cb7",
+   "metadata": {},
+   "source": [
+    "## Resultados modelo neuralODE sobre test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "36ee5a12",
@@ -459,6 +467,14 @@
     "print(\"MAE:\", mae)\n",
     "print(\"MSE:\", mse)\n",
     "print(\"SMAPE:\", smape_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3fd924c-c1cd-400d-aa45-771f0d0cc422",
+   "metadata": {},
+   "source": [
+    "## Resultados modelo LSTM sobre test"
    ]
   },
   {
@@ -496,7 +512,7 @@
    "id": "ae6bba7d",
    "metadata": {},
    "source": [
-    "### Santander Modelo Teacher"
+    "## Resultados modelo timesMOE sobre test"
    ]
   },
   {
@@ -785,7 +801,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ts",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -799,7 +815,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
