--- a/data/Main_neural.ipynb
+++ b/data/Main_neural.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f66f53ac",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a51bb61c",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "33d8840a",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2dfbda97",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "581d6296",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "2b4905fe",
    "metadata": {},
    "outputs": [
@@ -296,28 +296,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Loss: 1.0131\n",
-      "Epoch 2/20, Loss: 1.0036\n",
+      "Epoch 1/20, Loss: 1.0156\n",
+      "Epoch 2/20, Loss: 1.0037\n",
       "Epoch 3/20, Loss: 1.0035\n",
-      "Epoch 4/20, Loss: 1.0035\n",
-      "Epoch 5/20, Loss: 1.0034\n",
+      "Epoch 4/20, Loss: 1.0034\n",
+      "Epoch 5/20, Loss: 1.0035\n",
       "Epoch 6/20, Loss: 1.0034\n",
-      "Epoch 7/20, Loss: 1.0034\n",
-      "Epoch 8/20, Loss: 1.0034\n",
-      "Epoch 9/20, Loss: 1.0034\n",
-      "Epoch 10/20, Loss: 1.0034\n",
-      "Epoch 11/20, Loss: 1.0034\n",
-      "Epoch 12/20, Loss: 1.0034\n",
-      "Epoch 13/20, Loss: 1.0034\n",
-      "Epoch 14/20, Loss: 1.0034\n",
-      "Epoch 15/20, Loss: 1.0034\n",
-      "Epoch 16/20, Loss: 1.0034\n",
-      "Epoch 17/20, Loss: 1.0033\n",
-      "Epoch 18/20, Loss: 1.0034\n",
-      "Epoch 19/20, Loss: 1.0034\n",
-      "Epoch 20/20, Loss: 1.0033\n",
-      "Mejor época = 17, Loss = 1.0033\n",
-      "MAE: 0.7171, MSE: 0.9914, sMAPE: 97.4496\n"
+      "Epoch 7/20, Loss: 1.0034\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m model \u001b[38;5;241m=\u001b[39m NeuralODEModel()\n\u001b[1;32m----> 2\u001b[0m trained_model, loss_vals \u001b[38;5;241m=\u001b[39m \u001b[43mtrain_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[8], line 30\u001b[0m, in \u001b[0;36mtrain_model\u001b[1;34m(model, X_train, y_train, X_test, y_test, batch_size, epochs)\u001b[0m\n\u001b[0;32m     28\u001b[0m output \u001b[38;5;241m=\u001b[39m model(xb)\n\u001b[0;32m     29\u001b[0m loss \u001b[38;5;241m=\u001b[39m criterion(output, yb)\n\u001b[1;32m---> 30\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     31\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[0;32m     32\u001b[0m epoch_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m loss\u001b[38;5;241m.\u001b[39mitem() \u001b[38;5;241m*\u001b[39m xb\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m0\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\criju\\.conda\\envs\\cuda\\lib\\site-packages\\torch\\_tensor.py:522\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    512\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m    513\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    514\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[0;32m    515\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    520\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[0;32m    521\u001b[0m     )\n\u001b[1;32m--> 522\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    523\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[0;32m    524\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\criju\\.conda\\envs\\cuda\\lib\\site-packages\\torch\\autograd\\__init__.py:266\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    261\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[0;32m    263\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[0;32m    264\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    265\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 266\u001b[0m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[0;32m    267\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    268\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    269\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    270\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    271\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    272\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    273\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[0;32m    274\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -518,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "5bea34f4",
    "metadata": {},
    "outputs": [],
@@ -546,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "02f3d842",
    "metadata": {},
    "outputs": [],
@@ -642,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "e39c1714",
    "metadata": {},
    "outputs": [
@@ -650,26 +649,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20 — Train Loss: 1.2215\n",
-      "Epoch 2/20 — Train Loss: 1.0043\n",
-      "Epoch 3/20 — Train Loss: 0.8415\n",
-      "Epoch 4/20 — Train Loss: 0.6153\n",
-      "Epoch 5/20 — Train Loss: 0.3388\n",
-      "Epoch 6/20 — Train Loss: 0.2768\n",
-      "Epoch 7/20 — Train Loss: 0.2744\n",
-      "Epoch 8/20 — Train Loss: 0.2737\n",
-      "Epoch 9/20 — Train Loss: 0.2746\n",
-      "Epoch 10/20 — Train Loss: 0.2739\n",
-      "Epoch 11/20 — Train Loss: 0.2741\n",
-      "Epoch 12/20 — Train Loss: 0.2739\n",
-      "Epoch 13/20 — Train Loss: 0.2740\n",
-      "Epoch 14/20 — Train Loss: 0.2734\n",
-      "Epoch 15/20 — Train Loss: 0.2733\n",
-      "Epoch 16/20 — Train Loss: 0.2731\n",
-      "Epoch 17/20 — Train Loss: 0.2729\n",
-      "Epoch 18/20 — Train Loss: 0.2727\n",
-      "Epoch 19/20 — Train Loss: 0.2734\n",
-      "Epoch 20/20 — Train Loss: 0.2726\n"
+      "Epoch 1/20 — Train Loss: 0.5204\n",
+      "Epoch 2/20 — Train Loss: 0.3446\n",
+      "Epoch 3/20 — Train Loss: 0.3339\n",
+      "Epoch 4/20 — Train Loss: 0.3321\n",
+      "Epoch 5/20 — Train Loss: 0.3317\n",
+      "Epoch 6/20 — Train Loss: 0.3317\n",
+      "Epoch 7/20 — Train Loss: 0.3306\n",
+      "Epoch 8/20 — Train Loss: 0.3300\n",
+      "Epoch 9/20 — Train Loss: 0.3301\n",
+      "Epoch 10/20 — Train Loss: 0.3302\n",
+      "Epoch 11/20 — Train Loss: 0.3304\n",
+      "Epoch 12/20 — Train Loss: 0.3303\n",
+      "Epoch 13/20 — Train Loss: 0.3296\n",
+      "Epoch 14/20 — Train Loss: 0.3290\n",
+      "Epoch 15/20 — Train Loss: 0.3299\n",
+      "Epoch 16/20 — Train Loss: 0.3293\n",
+      "Epoch 17/20 — Train Loss: 0.3290\n",
+      "Epoch 18/20 — Train Loss: 0.3299\n",
+      "Epoch 19/20 — Train Loss: 0.3294\n",
+      "Epoch 20/20 — Train Loss: 0.3290\n"
      ]
     }
    ],
@@ -687,8 +686,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fbeb277a",
+   "metadata": {},
+   "source": [
+    "## Resultados de modelo Neural Destilado 3% sobre el conjunto de validación"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "bfe08350",
    "metadata": {},
    "outputs": [
@@ -696,9 +703,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE: 0.3149549131523068\n",
-      "MSE: 0.32710572199656607\n",
-      "SMAPE: 67.56714133581168\n"
+      "MAE: 0.3118915535322986\n",
+      "MSE: 0.32694123155519306\n",
+      "SMAPE: 66.96096839824082\n"
      ]
     }
    ],
@@ -718,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "d10883c5",
    "metadata": {},
    "outputs": [],
