add other metrics

--- a/data/inference.ipynb
+++ b/data/inference.ipynb
@@ -186,6 +186,7 @@
     "    \n",
     "# 1. Carga el checkpoint completo\n",
     "checkpoint = torch.load(\"Models_neural/modelo_3_dest.pth\", map_location=\"cpu\")\n",
+    "checkpoint_2 = torch.load(\"Models_neural/modelo_3.pth\", map_location=\"cpu\")\n",
     "\n",
     "# 2. Filtra y renombra solo los pesos de 'backbone'\n",
     "new_state_dict = {}\n",
@@ -198,13 +199,28 @@
     "\n",
     "# 3. Crea tu modelo y carga con strict=False para ignorar lo que falte\n",
     "ode_model = NeuralODEModel()\n",
-    "missing, unexpected = ode_model.load_state_dict(new_state_dict, strict=False)\n",
-    "ode_model.eval()\n"
+    "missing, unexpected = ode_model.load_state_dict(checkpoint, strict=False)\n",
+    "ode_model.eval()\n",
+    "\n",
+    "\n",
+    "# 2. Filtra y renombra solo los pesos de 'backbone'\n",
+    "new_state_dict = {}\n",
+    "for k, v in checkpoint_2.items():\n",
+    "    if k.startswith(\"backbone.odefunc.\"):\n",
+    "        # elimino el prefijo \"backbone.\"\n",
+    "        new_key = k.replace(\"backbone.\", \"\")\n",
+    "        new_state_dict[new_key] = v\n",
+    "\n",
+    "\n",
+    "# 3. Crea tu modelo y carga con strict=False para ignorar lo que falte\n",
+    "ode_model_2 = NeuralODEModel()\n",
+    "missing, unexpected = ode_model_2.load_state_dict(checkpoint_2, strict=False)\n",
+    "ode_model_2.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a4caf3ee",
    "metadata": {},
    "outputs": [
@@ -287,6 +303,83 @@
       ],
       "text/plain": [
        "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m10,502\u001b[0m (41.02 KB)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Non-trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> (0.00 B)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Non-trainable params: \u001b[0m\u001b[38;5;34m0\u001b[0m (0.00 B)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_2\"</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1mModel: \"sequential_2\"\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+       "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+       "│ lstm_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">LSTM</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">50</span>)             │        <span style=\"color: #00af00; text-decoration-color: #00af00\">10,400</span> │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">51</span> │\n",
+       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
+       "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
+       "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
+       "│ lstm_2 (\u001b[38;5;33mLSTM\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m50\u001b[0m)             │        \u001b[38;5;34m10,400\u001b[0m │\n",
+       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
+       "│ dense_2 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m1\u001b[0m)              │            \u001b[38;5;34m51\u001b[0m │\n",
+       "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Total params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">10,451</span> (40.82 KB)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Total params: \u001b[0m\u001b[38;5;34m10,451\u001b[0m (40.82 KB)\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> Trainable params: </span><span style=\"color: #00af00; text-decoration-color: #00af00\">10,451</span> (40.82 KB)\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m Trainable params: \u001b[0m\u001b[38;5;34m10,451\u001b[0m (40.82 KB)\n"
       ]
      },
      "metadata": {},
@@ -420,7 +513,13 @@
     "    \"Models_lstm/lstm_healthcare_model_3_destilation.keras\",\n",
     "    compile=False\n",
     ")\n",
-    "lstm_model.summary()"
+    "lstm_model.summary()\n",
+    "\n",
+    "lstm_model_2 = tf.keras.models.load_model(\n",
+    "    \"Models_lstm/lstm_healthcare_model_3.keras\",\n",
+    "    compile=False\n",
+    ")\n",
+    "lstm_model_2.summary()"
    ]
   },
   {
@@ -429,6 +528,14 @@
    "metadata": {},
    "source": [
     "## Resultados modelo neuralODE sobre test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a898f89",
+   "metadata": {},
+   "source": [
+    "### Neural Destillado"
    ]
   },
   {
@@ -465,10 +572,58 @@
   },
   {
    "cell_type": "markdown",
+   "id": "aaf187ee",
+   "metadata": {},
+   "source": [
+    "### Neural sin destilar 3%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "1bca350d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 53.40215965944758\n",
+      "MSE: 13742.825941714329\n",
+      "SMAPE: 73.19421626043972\n"
+     ]
+    }
+   ],
+   "source": [
+    "ode_model_2.eval()\n",
+    "x_neural = torch.tensor(X, dtype=torch.float32)\n",
+    "pred_2 = ode_model_2(x_neural)\n",
+    "# Rd_pred es tu salida distill, compárala con y_val:\n",
+    "results_neural_2 =  pred_2.cpu().detach().numpy()\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "mse = mean_squared_error(y, results_neural_2)\n",
+    "mae = mean_absolute_error(y,results_neural_2)\n",
+    "smape_val = smape(y,results_neural_2)\n",
+    "\n",
+    "print(\"MAE:\", mae)\n",
+    "print(\"MSE:\", mse)\n",
+    "print(\"SMAPE:\", smape_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d3fd924c-c1cd-400d-aa45-771f0d0cc422",
    "metadata": {},
    "source": [
     "## Resultados modelo LSTM sobre test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ff66a2c",
+   "metadata": {},
+   "source": [
+    "### LSTM Destilado"
    ]
   },
   {
@@ -495,6 +650,44 @@
     "mae = mean_absolute_error(y, Rd_output)\n",
     "mse = mean_squared_error(y, Rd_output)\n",
     "smape_val = smape(y, Rd_output)\n",
+    "\n",
+    "print(\"MAE:\", mae)\n",
+    "print(\"MSE:\", mse)\n",
+    "print(\"SMAPE:\", smape_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbc3a4db",
+   "metadata": {},
+   "source": [
+    "### LSTM sin destilar\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "eccbcb98",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m35/35\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 4ms/step\n",
+      "MAE: 262.2399413933195\n",
+      "MSE: 251619.29812068972\n",
+      "SMAPE: 78.31080088034183\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_lstm = lstm_model_2.predict(X)\n",
+    "\n",
+    "#Resultados de modelos teacher sobre el conjunto de validación \n",
+    "mae = mean_absolute_error(y, output_lstm)\n",
+    "mse = mean_squared_error(y, output_lstm)\n",
+    "smape_val = smape(y, output_lstm)\n",
     "\n",
     "print(\"MAE:\", mae)\n",
     "print(\"MSE:\", mse)\n",
