--- a/data/inference.ipynb
+++ b/data/inference.ipynb
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "58d45d4a",
    "metadata": {},
    "outputs": [
@@ -1161,8 +1161,8 @@
     }
    ],
    "source": [
-    "smape_techaer = smape_test(y_segmento, teacher_segmento)\n",
-    "smape_neural = smape_test(y_segmento, destulado_neural.flatten())\n",
+    "smape_techaer = smape(y_segmento, teacher_segmento)\n",
+    "smape_neural = smape(y_segmento, destulado_neural.flatten())\n",
     "\n",
     "\n",
     "x = range(len(smape_techaer))\n",
